correction de l'exercice1

--- a/affiche.html
+++ b/affiche.html
@@ -10,15 +10,10 @@
     <header>
         <table>
         <tr>
-            <td><a href="page affiche.html"> accueil</a> </td>
-        
-        </tr>
-
-
-            
-        </table>
+            <td><a href="page_affiche.html"> accueil</a> </td>
+        </tr>        </table>
     </header>
-<center><a> <h1> biennvenue dans notre page!</h1></a></center>
+<a> <h1> biennvenue dans notre page!</h1></a>
 <p> Le Gel Nettoyant Micellaire Naturally Good de Nivea s'engage à donner le meilleur pour votre peau. 
     Il est composé d'Aloe Vera Bio et d'ingrédients à 99% d'origine naturelle pour respecter votre peau. 
     Ce démaquillant tout-en-1 retire efficacement le maquillage, nettoie en douceur et rafraîchit la peau.
